deployment/postgres/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: postgres
spec:
  ingressClassName: nginx
  rules:
    - host: "db.berlin-united.com"
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: postgres-postgresql
                port:
                  number: 5432
